@@ -1,12 +1,13 @@
 <html><body>
-Dragging in the text area with the middle mouse button
-creates a selection without moving the
-caret. As soon as the mouse button is released, the selected text is
-inserted at the caret position and the selection is deactivated.<p>
+If <b>quick copy</b> is enabled in
+the <b>Text Area</b> pane of the <b>Utilities</b>&gt;<b>Global
+Options</b> dialog box, dragging with the middle mouse button over some text
+inserts that text at the previous caret position.<p>
 
-This feature has two additional, more suttle behaviors:
+This feature has three additional, more suttle behaviors:
 
 <ul>
+<li>Holding down <b>Shift</b> while clicking the middle mouse button immediately duplicates all text between the caret position and the clicked location.
 <li>If there already is a selection when you start middle-dragging, the selection
 will be replaced with the region you marked with the mouse.</li>
 <li>Holding down <b>Control</b> while dragging the middle mouse button marks a
